# flowcoro

./: .gitignore  CMakeLists.txt  CORE_ROBUSTNESS_ROADMAP.md  COROUTINE_LIFECYCLE_ANALYSIS.md  IMPROVEMENT_SUMMARY.md  INTEGRATION_REPORT.md  LICENSE  PERFORMANCE_COMPARISON.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_PLAN.md  PROJECT_STATUS_FINAL.md  README.md  README_old_broken.md  README_zh.md  enhanced_demo.cpp  example.cpp  flowcoro.h  http_request.h  http_request_simple.h  lockfree.h  lockfree_thread_pool.h  logger.h  object_pool.h  phase3_simple_demo  test_cancel_standalone.cpp  test_core_simple.cpp  test_phase2  test_simple.cpp  thread_pool.h  thread_safety_test.cpp  v2.2.0-SUMMARY.md
.github/: tsan_suppressions.txt
.github/workflows/: ci.yml
_codeql_build_dir/: Makefile
_codeql_build_dir/benchmarks/: Makefile
_codeql_build_dir/examples/: Makefile  chat_client  chat_server
_codeql_build_dir/tests/: Makefile  test_core  test_cross_thread  test_database  test_network  test_network_professional  test_new_features  test_rpc  test_sleep_for  test_when_any
benchmarks/: CMakeLists.txt  Cargo.toml  README.md  accurate_bench.cpp  go_benchmark.go  professional_flowcoro_benchmark.cpp  professional_go_benchmark.go  rust_benchmark.rs  simple_bench.cpp  simple_benchmark.cpp  simple_qps_benchmark.cpp
benchmarks/professional_rust_benchmark/: Cargo.toml
benchmarks/professional_rust_benchmark/src/: main.rs
build-asan/: Makefile
build-asan/benchmarks/: Makefile
build-asan/examples/: Makefile  chat_client  chat_server
build-asan/examples/autonomous_driving/: Makefile  ad_pipeline_demo
build-asan/tests/: Makefile  test_bus_awaitable  test_cancellation  test_core  test_cross_thread  test_database  test_exception_propagation  test_lockfree_stress  test_network  test_new_features  test_rpc  test_sleep_for  test_timeout  test_when_any  test_when_any_v2
cmake/: FlowCoroConfig.cmake  FlowCoroConfig.cmake.in  LifecycleComponents.cmake  V3Architecture.cmake
docs/: AI_ASSISTED_DESIGN.md  API_AND_TECHNICAL_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BENCHMARK_RESULTS.md  BUSINESS_GUIDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY_v2.3.md  CORE_DEFECTS_ANALYSIS.md  CORE_INTEGRATION_GUIDE.md  COROUTINE_LEARNING_GUIDE.md  COROUTINE_SCHEDULER.md  DATABASE_CONNECTION_POOL.md  DATABASE_GUIDE.md  DEVELOPMENT_GUIDE.md  EXECUTION_PLAN.md  EXTENSION_ROADMAP.md  FINAL_TEST_REPORT.md  INTEGRATION_SUMMARY.md  INTRODUCTION.md  IOMANAGER_LEARNING_PLAN.md  LEARNING_GUIDE.md  LIFECYCLE_INTEGRATION_REPORT.md  MAIN_THREAD_EXECUTION_FIX.md  NETWORK_GUIDE.md  NETWORK_IMPLEMENTATION.md  PERFORMANCE_AND_LEARNING_GUIDE.md  PERFORMANCE_DATA.md  PERFORMANCE_GUIDE.md  PGO_GUIDE.md  PHASE2_IMPLEMENTATION.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  ROADMAP.md  ROADMAP_NEW.md  RPC_FIX_REPORT.md  (+5 more)
examples/: CMakeLists.txt  CMakeLists_clean.txt  CMakeLists_old.txt  advanced_features_demo.cpp  advanced_lifecycle_demo.cpp  business_demo.cpp  chat_client.cpp  chat_server.cpp  core_integration_demo.cpp  coroutine_pool_demo.cpp  db_connection_pool_example.cpp  echo_server.cpp  enhanced_demo.cpp  example.cpp  hello_world.cpp  hello_world_concurrent.cpp  http_db_integration_demo.cpp  improved_safe_task_demo.cpp  lifecycle_demo.cpp  lifecycle_integration_complete_demo.cpp  lifecycle_integration_demo.cpp  lifecycle_integration_test.cpp  network_example.cpp  optimized_coroutine_pool.cpp  performance_monitor_demo.cpp  phase2_demo.cpp  phase2_simple.cpp  phase2_simple_demo.cpp  phase3_demo.cpp  phase3_simple_demo.cpp  phase4_final_demo.cpp  phase4_integration_demo.cpp  rpc_demo.cpp  safe_coroutine_pool_demo.cpp  simple_integration_demo.cpp  simple_lifecycle_demo.cpp  simple_lifecycle_integration.cpp  simple_pool_test.cpp  simple_rpc_demo.cpp  simple_test.cpp  (+7 more)
examples/autonomous_driving/: CMakeLists.txt  ad_pipeline_demo.cpp
include/: flowcoro.hpp
include/flowcoro/: async_promise.h  async_rpc.h  async_sync.h  awaiter.h  awaiter_impl.h  buffer.h  c_api.h  cancellation.h  channel.h  core.h  core_simple.h  coro_task.h  coroutine_manager.h  coroutine_scope.h  coroutine_state.h  coroutine_task.h  dds.h  enhanced_coroutine.h  error_handling.h  flowcoro_cancellation.h  flowcoro_enhanced_task.h  flowcoro_unified.h  flowcoro_unified_simple.h  future_combinators.h  future_combinators_new.h  hazard_pointer.h  http_client.h  http_request.h  lifecycle.h  lifecycle_v2.h  load_balancer.h  lockfree.h  logger.h  memory.h  memory_pool.h  net.h  network.h  network_request.h  performance_monitor.h  phase3_coroutine_pool.h  (+18 more)
include/flowcoro/db/: connection_pool.h  mysql_driver.h  pool_monitor.h  redis_driver.h  transaction_manager.h
include/flowcoro/lifecycle/: advanced_lifecycle.h  cancellation.h  core.h  coroutine_pool.h  enhanced_task.h  pooled_task.h
scripts/: README_emoji_removal.md  auto_tmux_test.sh  build.sh  remove_emojis.py  remove_emojis.sh  run_core_test.sh  run_tests.sh  run_tests_new.sh
src/: c_api.cpp  coroutine_pool.cpp  globals.cpp  net_impl.cpp
test/: coro_tests.cpp
tests/: CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  coro_tests.cpp  run_all_tests.cpp  test_bus_awaitable.cpp  test_c_api.c  test_cancellation.cpp  test_core.cpp  test_core_minimal.cpp  test_core_simple.cpp  test_cross_thread.cpp  test_database.cpp  test_database_minimal.cpp  test_exception_propagation.cpp  test_framework.h  test_http_client.cpp  test_lifecycle.cpp  test_lifecycle_basic.cpp  test_lockfree_only.cpp  test_lockfree_stress.cpp  test_network.cpp  test_network_professional.cpp  test_new_features.cpp  test_performance.cpp  test_phase2.cpp  test_rpc.cpp  test_rt_executor.cpp  test_simple.cpp  test_simple_db.cpp  test_sleep_for.cpp  test_sleep_only.cpp  test_stack_pool_usage.cpp  test_timeout.cpp  test_v3_architecture.cpp  test_when_any.cpp  test_when_any_v2.cpp
